<resources>
    <string name="app_name">Фляга Диониса</string>
    <string name="todo">todo</string>
    <string name="iba_logo">IBA</string>
    <string name="search">Поиск</string>
    <string name="about_project">О проекте</string>
    <string name="drink_of_the_day">Коктейль дня</string>
    <string name="aboutDrink">О коктейле</string>
    <string name="formula">рецепт</string>
    <string name="composition">состав</string>
    <string name="tools">инструменты</string>
    <string name="error_message">Что то пошло не так… \n Проверте интернет и нажмите кнопку повторить</string>
    <string name="retry">Повторить</string>
    <string name="done">готово</string>
    <string name="hint_filter_search">Введите ингредиент</string>
    <string name="filter_empty">Фильтры не доступны</string>
    <string name="empty_search_component">Продукт не найден</string>
    <string name="contains">Содержит</string>
    <string name="add_ingredient">Еще ингредиент</string>
    <string name="not_contains">Не содержит</string>
    <string name="fortress">Крепость</string>
    <string name="add_fortress">Еще крепость</string>
    <string name="volumes_drink">Объем коктейля</string>
    <string name="add">еще</string>
    <string name="complication_drink">Сложность приготовления</string>
    <string name="another">Другое</string>
    <string name="main_drink">Основное</string>
    <string name="advice_ingredient">Выберите один или несколько ингредиентов, по которым искать напиток</string>
    <string name="advice_not_ingredient">Выберите один или несколько ингредиентов, которых нет должно быть в напитке</string>
    <string name="advice_fortress">Выберите один или несколько вариантов крепости напитка</string>
    <string name="advice_volumes">Выберите один или несколько вариантов объема коктеля</string>
    <string name="advice_complication">Выберите один или несколько вариантов сложности приготовления напитка</string>
    <string name="advice_other">Выберите один или несколько типов коктеля</string>
    <string name="description_iba_badge">Коктель международной ассоциации барменов</string>
    <string name="description_hot_badge">Горящий</string>
    <string name="description_puff_badge">Слоеный</string>
    <string name="description_main">Не забудьте отметить коктейль, который вы уже попробовали , а также оценить его . Это поможет другим пользователям подобрать напиток, и поможет нам предложить коктейли, которые понравятся именно вам. Если вам понравился этот коктейль, вы можете найти похожие на него, поделиться им с друзьями или добавить в избранное .</string>
    <string name="tried_prefix">Попробовали: %s</string>
    <string name="cooking_level_prefix">Сложность: %s</string>
    <string name="alcohol_strength_prefix">Крепость: %s</string>
</resources>
